--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ padding: 10px;
 font-family: "Exo 2"; 
 } 
 
+
 header {
 background-image: url(http://www.slate.com/content/dam/slate/blogs/bad_astronomy/2016/04/18/shainblum_valleyofthecosmos.jpg.CROP.original-original.jpg); 
 width: 100%; 
@@ -21,6 +22,7 @@ border: 2px solid royalblue;
 padding: 15px 5px; 
 margin: 20px; 
 border-radius: 20px; 
+text-align: center; 
 } 
 
 .title 
@@ -28,7 +30,7 @@ border-radius: 20px;
 Color: rgb(155, 232, 206);
 font-family: 'Tajawal'; 
 text-align: center; 
-margin-top: 40px; 
+margin-top: 70px; 
 } 
 
 article { 
@@ -37,7 +39,7 @@ article {
   border: 2px solid royalblue; 
   margin: 10px; 
   border-radius: 20px; 
-  
+  padding: 5px; 
 } 
 
 .live { text-decoration: none; } 
@@ -66,28 +68,6 @@ article > p > .live:hover {
 
 .live:hover { text-decoration: underline; } 
 
-nav > ul > li { 
-  font-family: "exo 2"; 
-  display: inline-block; 
-} 
-
-nav > ul > li > a { 
-  font-family: "exo 2"; 
-  display: inline-block;
-  margin: 5px; 
-  text-decoration: none; 
-   
-} 
-
-nav > ul { 
-  border: 2px solid royalblue; 
-  height: 40px; 
-  margin: 10px; 
-  padding: 3px; 
-  text-align: center; 
-  border-radius: 20px; 
-} 
-
 .lead { 
   font-weight: 700; } 
 
@@ -95,8 +75,64 @@ nav > ul {
   height: 600px; 
   margin: 20px; 
   padding: 15px; 
-  background-image: url(https://i.pinimg.com/originals/b6/6d/68/b66d680ee16fba46879403ebb8ef0017.jpg); 
-  
+  background-image: url(https://cdn.suwalls.com/wallpapers/fantasy/boy-with-his-kite-in-a-blue-night-25631-2560x1440.jpg); 
 } 
+
+footer { 
+border-radius: 20px; 
+height: 80px; 
+background-color: rgb(211, 211, 232); 
+margin: 10px;
+padding: 5px; 
+border: 2px solid royalblue;  
+}  
+
+a { 
+  text-decoration: none; 
+  color: black; } 
+
+nav { 
+  margin: 10px; 
+} 
+
+nav > ul { 
+  display: inline-block; 
+  text-align: center; 
+  margin: 10px; 
+  border: 2px solid royalblue;
+  background-color: rgb(155, 232, 206); 
+  color: black;
+  text-align: center; 
+  border-radius: 20px;  
+  width: 600px;  
+} 
+
+nav > ul > li {  
+  height: 20px; 
+  margin: 1px;
+  border-radius: 20px; 
+  display: inline-block; 
+ } 
+
+nav > ul > li > a {
+  font-family: "exo 2";
+  text-decoration: none;
+  padding: 2px; 
+  margin-right: 8px; 
+} 
+
+nav > ul > li > ul { 
+  display: none; 
+  position: absolute; 
+  padding: 0; 
+}
+
+nav > ul > li > ul { list-style-type: none; } 
+
+nav > ul > .drop_projects:hover > ul {display: block; } 
+
+nav > ul > li:hover > ul {display: block; } 
+
+nav > ul > li:hover, nav { margin-bottom: 40px; } 
 
 
