--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ font-family: "Source Sans Pro";
 header {
 background-image: url(https://aainter3.files.wordpress.com/2015/10/15465270242_d4d36587f0_b.jpg); 
 width: 97%; 
-height: 300px; 
+height: 350px; 
 border: 2px solid royalblue; 
 padding: 15px 5px; 
 margin: 20px; 
@@ -94,6 +94,7 @@ border: 2px solid royalblue;
 display: block;  
 margin-left: 15px;
 margin-bottom: 10px; 
+font: exo 2; 
 }
  
 
@@ -170,9 +171,15 @@ text-decoration: underline:
 
 .drop_projects { font: "exo 2"; } 
 
-.longg { height: 600px; } 
+.longg { height: 900px; } 
 
-.parentlongg { height: 1300px; } 
+.parentlongg { 
+  height: 1300px; 
+  margin: 20px; 
+  padding: 15px; 
+  text-align: center; 
+  background-image: url(http://surrealism.website/Artists/Johfra/1957%20Lentemorgen.jpg); 
+} 
 
 
 
